<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral95"
    android:visibility="visible"
    tools:context=".OvidoClaveActivity">

    <Button
        android:id="@+id/button_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:onClick="goToMain"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo_olvido"
        android:layout_width="218dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tituloOlvido"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_volver" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="323dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="54dp"
        android:text="@string/infoOlvido"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_olvido" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="358dp"
        android:ems="10"
        android:hint="Ejemplo: example@example.com"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="245dp"
        android:onClick="enviaPasos"
        android:text="@string/enviarCorreo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/confirmacionPasos"
        android:layout_width="268dp"
        android:layout_height="127dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="115dp"
        android:text="@string/confirmacion"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>