<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral95"
    tools:context=".DashboardActivity">


    <Button
        android:id="@+id/button_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:onClick="logout"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  <Button
        android:id="@+id/button_reservas"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ir_reservas"
        android:onClick="goToReservas"
        android:backgroundTint="@color/design_default_color_primary"
        android:textColor="@color/design_default_color_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" /> -->

    <Button
        android:id="@+id/button_perfil"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="268dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:onClick="goToPerfil"
        android:text="@string/ir_perfil"
        android:textColor="@color/design_default_color_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_libros" />

    <Button
        android:id="@+id/button_libros"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:onClick="goToLibros"
        android:text="@string/ir_libros"
        android:textColor="@color/design_default_color_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bienvenida"
        android:layout_width="201dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bienvenida"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_volver" />

</androidx.constraintlayout.widget.ConstraintLayout>