<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral95"
    tools:context=".PerfilActivity">

    <Button
        android:id="@+id/button_act_clave"
        android:layout_width="158dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="123dp"
        android:text="@string/update"
        android:onClick="actualizarClave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_clave" />

    <Button
        android:id="@+id/button_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:onClick="goToDashboard"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="215dp"
        android:layout_height="77dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="35dp"
        android:text="@string/seccionPerfil"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_cambiarUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_cambiarUsuario"
        android:layout_width="342dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="13dp"
        android:text="@string/updateUsuario"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/text_cambiaClave"
        android:layout_width="322dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/updateClave"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_clave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_act_usuario" />

    <EditText
        android:id="@+id/editText_usuario"
        android:layout_width="345dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="Escribe un nuevo nombre de usuario"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral30"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_act_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cambiarUsuario" />

    <EditText
        android:id="@+id/editText_clave"
        android:layout_width="345dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Escribe una nueva clave"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/material_dynamic_neutral30"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_act_clave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cambiaClave" />

    <Button
        android:id="@+id/button_act_usuario"
        android:layout_width="151dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="18dp"
        android:text="@string/update"
        android:onClick="actualizarUsuario"
        app:layout_constraintBottom_toTopOf="@+id/text_cambiaClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_usuario" />


</androidx.constraintlayout.widget.ConstraintLayout>